2003-12-09  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-message.c (soup_soap_message_persist):
	(soup_soap_message_parse_response): print out request/response's
	contents, if in debug mode.

2003-12-07  JP Rosevear  <jpr@ximian.com>

	* configure.in: Bump version

2003-11-28  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]
	(soup_soap_parameter_get_first_child,
	soup_soap_parameter_get_first_child_by_name,
	soup_soap_parameter_get_next_child,
	soup_soap_parameter_get_next_child_by_name): new functions to
	manage SoupSoapParameter's children.
	(soup_soap_response_get_first_parameter): dont return a GList, but
	a SoupSoapParameter contained in the GList.

2003-11-26  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]
	(soup_soap_parameter_get_string_value): new function.

2003-11-26  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]: added SoupSoapParameter
	structure, to "hide" the usage of xmlNode's.
	(soup_soap_parameter_get_name): functions to manage SOAP
	response parameters.
	(soup_soap_response_get_first_parameter,
	soup_soap_response_get_first_parameter_by_name,
	soup_soap_response_get_next_parameter,
	soup_soap_response_get_next_parameter_by_name):
	new functions for an easy access to the response's parameters.
	(soup_soap_response_from_string): removed warnings.

2003-11-25  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.c (soup_soap_response_set_method_name):
	fixed typo.

2003-11-25  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch] (soup_soap_response_get_method_name,
	soup_soap_response_set_method_name, soup_soap_message_get_parameters):
	new functions.
	(finalize): NULL out new private fields.
	(soup_soap_response_from_string): added validation code.

2003-11-23  Rodrigo Moya <rodrigo@ximian.com>

	* libsoup/soup-soap-response.[ch]: new class for managing SOAP
	responses.

	* libsoup/soup-soap-message.[ch] (soup_soap_message_parse_response):